added scout percentage

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "partiopotentiaali",
+  "homepage": "http://anttohautamaki.info/partio/build/",
   "version": "0.1.0",
-  "homepage": "http://anttohautamaki.info/partio/build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
