--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "leaflet-heatmap": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "reactjs-popup": "^1.5.0",
     "uniqid": "^5.2.0"
   },
